// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Field /> label 속성이 들어오면 그려준다 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
}

<div
  className="c0"
>
  <LabelArea>
    <Label
      htmlFor="name"
    >
      foo label
    </Label>
  </LabelArea>
  <Input
    id="name"
    name="name"
    theme={
      Object {
        "fonts": Object {
          "default": "'Spoqa Han Sans', 'Sans-serif', 'Helvetica Neue', 'Nanum Gothic'",
          "monospace": "'Monaco', 'Consolas'",
        },
        "palette": Object {
          "gray": Object {
            "10": "#FAFAFA",
            "100": "#2D2D2D",
            "20": "#F5F5F5",
            "30": "#EEEEEE",
            "40": "#E0E0E0",
            "50": "#BDBDBD",
            "60": "#9E9E9E",
            "70": "#757575",
            "80": "#616161",
            "90": "#424242",
          },
          "red": Object {
            "default": "#FF8787",
          },
          "transparent": Object {
            "default": "transparent",
          },
          "white": Object {
            "default": "#FFF",
          },
          "yellow": Object {
            "default": "#FBC02D",
          },
        },
        "sizes": Object {},
      }
    }
    touched={false}
    type="text"
  />
</div>
`;

exports[`<Field /> 오류 메시지를 표시한다 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
}

<div
  className="c0"
>
  <LabelArea>
    <Error>
      foo error
    </Error>
  </LabelArea>
  <Input
    error="foo error"
    id="name"
    name="name"
    theme={
      Object {
        "fonts": Object {
          "default": "'Spoqa Han Sans', 'Sans-serif', 'Helvetica Neue', 'Nanum Gothic'",
          "monospace": "'Monaco', 'Consolas'",
        },
        "palette": Object {
          "gray": Object {
            "10": "#FAFAFA",
            "100": "#2D2D2D",
            "20": "#F5F5F5",
            "30": "#EEEEEE",
            "40": "#E0E0E0",
            "50": "#BDBDBD",
            "60": "#9E9E9E",
            "70": "#757575",
            "80": "#616161",
            "90": "#424242",
          },
          "red": Object {
            "default": "#FF8787",
          },
          "transparent": Object {
            "default": "transparent",
          },
          "white": Object {
            "default": "#FFF",
          },
          "yellow": Object {
            "default": "#FBC02D",
          },
        },
        "sizes": Object {},
      }
    }
    touched={false}
    type="text"
  />
</div>
`;

exports[`<Field /> 정상적으로 렌더링된다 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
}

<div
  class="c0"
>
  <span
    componentname="Input"
  />
</div>
`;
